compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_trait_projection_normalizes_from_env_bounds.rn
// class: const-generic-projection
// source: projection normalization through active trait bounds must preserve const trait arguments
// exit: 0

trait HasOut[N: usize] {
    type Out;
};

struct X {};

impl X: HasOut[1] {
    type Out = i32;
}

fn lift[T](value: T.HasOut[1].Out) T.HasOut[1].Out
    where T: HasOut[1, Out = i32],
{
    return value;
}

fn main() i32 {
    return lift[X](7) - 7;
}
